[project]
requires-python = '>=3.7'
name = "pyfolio-reloaded"
version = "0.1.0"
description = "Performance and risk analysis of financial portfolios with Python"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = 'Quantopian Inc' },
    { email = 'pm@ml4trading.io' }
]
maintainers = [
    { name = 'Stefan Jansen' },
    { email = 'pm@ml4trading.io' }
]
classifiers = [
    'Development Status :: 4 - Beta',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Operating System :: OS Independent',
    'Intended Audience :: Science/Research',
    'Topic :: Office/Business :: Financial :: Investment',
    'Topic :: Scientific/Engineering :: Information Analysis',
]
dependencies = [
    "ipython >=3.2.3",
    "matplotlib >=1.4.0",
    "numpy >=1.11.1",
    "pandas >=0.18.1",
    "pytz >=2014.10",
    "scipy >=0.14.0",
    "scikit-learn >=0.16.1",
    "seaborn >=0.7.1",
    "empyrical-reloaded >=0.5.8",
]

[build-system]
requires = [
    'setuptools>=54.0.0',
    'wheel>=0.31.0',
    'oldest-supported-numpy; python_version>="3.7"',
]
build-backend = 'setuptools.build_meta'

[tool.black]
target-version = ['py37', 'py38']
line-length = 79
include = '\.pyi?$'
extend-exclude = '''
\(
  docs/source/conf.py
\)
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q"
testpaths = [
    "pyfolio/tests"
]
